While trying to compile a C++ file, I recieved the following error, indicating that perhaps some system header files need to be modified so they will tolerate the new gcc: /usr/include/runetype.h:56: redeclaration of C++ built-in type `wchar_t' Fix: Well, a woekaround would be to use gcc 2.9.5 but ideally, we would find a way od not declaring this type if it is already defined. Perhaps an IFDEF... How-To-Repeat: I tried to build the QT23 port & this fails very quickly.
I found the same problem in these 2 additional files: /usr/include/stdlib.h /usr/include/stddef.h After commenting out the line with the typedef, everything seems to be compiling OK. -- "Think Random" www.quikbox.ca
State Changed From-To: open->feedback As far as I know (I originally experienced the same bug) this has been fixed by now. Can you confirm this?
Responsible Changed From-To: freebsd-bugs->gerald I'll try to handle this.
Unfortunately, I no longer run FreeBSD so I am unable to verify this for you. However, I am fairly certain that this bug would have been fixed by now. I know I am able to build QT2.3 on Linux at any rate, using gcc-3.2.1
State Changed From-To: feedback->closed Resolved by fixes to our header files, such as stdlib 1.37 and stddef 1.7, which were backported to -STABLE.