Don't define wchar_t if we are a C++ compiler.

PR:		31864, 40084

Former-commit-id: a3e321e53e7e375c6b77c421c7ea1319f0960aea