include/inttypes.h
@@ -27,6 +27,12 @@ directive|include
 file|<sys/stdint.h>
 end_include
 
+begin_ifndef
+ifndef|#
+directive|ifndef
+name|__cplusplus
+end_ifndef
+
 begin_ifdef
 ifdef|#
 directive|ifdef
@@ -45,6 +51,11 @@ undef|#
 directive|undef
 name|_BSD_WCHAR_T_
 end_undef
+
+begin_endif
+endif|#
+directive|endif
+end_endif
 
 begin_endif
 endif|#
